--- a/index.html
+++ b/index.html
@@ -6,5 +6,15 @@
     <title>Document</title>
     <link rel="stylesheet" href="stylesheets/style.css" />
   </head>
-  <body></body>
+  <body>
+    <section class="titleBlock">
+      <div class="logoCircle1">
+        <div class="circle_1"></div>
+        <div class="circle_2"></div>
+        <div class="circle_3"></div>
+        <div class="circle_4"></div>
+      </div>
+      <h1>SOMNIA</h1>
+    </section>
+  </body>
 </html>
