--- a/index.html
+++ b/index.html
@@ -7,14 +7,6 @@
     <link rel="stylesheet" href="stylesheets/style.css" />
   </head>
   <body>
-    <section class="titleBlock">
-      <div class="logoCircle1">
-        <div class="circle_1"></div>
-        <div class="circle_2"></div>
-        <div class="circle_3"></div>
-        <div class="circle_4"></div>
-      </div>
-      <h1>SOMNIA</h1>
-    </section>
+    <section class="titleBlock"></section>
   </body>
 </html>
