--- a/index.html
+++ b/index.html
@@ -5,8 +5,348 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="stylesheets/style.css" />
+    <link rel="icon" href="images/iconSleep.ico" type="image/x-icon">
   </head>
   <body>
-    <section class="titleBlock"></section>
+    <section class="titleBlock">
+      <div class="logoPics">
+        <div class="logo12">
+          <div class="logo_1">
+            <div class="top">
+              <div class="circle_1"></div>
+              <div class="circle_2"></div>
+            </div>
+            <div class="bottom">
+              <div class="circle_3"></div>
+              <div class="circle_4"></div>
+            </div>
+          </div>
+          <div class="logo_2">
+            <div class="top">
+              <div class="circle_1"></div>
+              <div class="circle_2"></div>
+            </div>
+            <div class="bottom">
+              <div class="circle_3"></div>
+              <div class="circle_4"></div>
+            </div>
+          </div>
+        </div>
+        <div class="logo_3">
+          <div class="top">
+            <div class="circle_1"></div>
+            <div class="circle_2"></div>
+          </div>
+          <div class="bottom">
+            <div class="circle_3"></div>
+            <div class="circle_4"></div>
+          </div>
+        </div>
+
+        <div class="logo_4">
+          <div class="top">
+            <div class="circle_1"></div>
+            <div class="circle_2"></div>
+          </div>
+          <div class="bottom">
+            <div class="circle_3"></div>
+            <div class="circle_4"></div>
+          </div>
+        </div>
+        <div class="logo56">
+          <div class="logo_5">
+            <div class="top">
+              <div class="circle_1"></div>
+              <div class="circle_2"></div>
+            </div>
+            <div class="bottom">
+              <div class="circle_3"></div>
+              <div class="circle_4"></div>
+            </div>
+          </div>
+          <div class="logo_6">
+            <div class="top">
+              <div class="circle_1"></div>
+              <div class="circle_2"></div>
+            </div>
+            <div class="bottom">
+              <div class="circle_3"></div>
+              <div class="circle_4"></div>
+            </div>
+          </div>
+        </div>
+        <div class="logo78">
+          <div class="logo_7">
+            <div class="top">
+              <div class="circle_1"></div>
+              <div class="circle_2"></div>
+            </div>
+            <div class="bottom">
+              <div class="circle_3"></div>
+              <div class="circle_4"></div>
+            </div>
+          </div>
+          <div class="logo_8">
+            <div class="top">
+              <div class="circle_1"></div>
+              <div class="circle_2"></div>
+            </div>
+            <div class="bottom">
+              <div class="circle_3"></div>
+              <div class="circle_4"></div>
+            </div>
+          </div>
+        </div>
+        <div class="logo_9">
+          <div class="top">
+            <div class="circle_1"></div>
+            <div class="circle_2"></div>
+          </div>
+          <div class="bottom">
+            <div class="circle_3"></div>
+            <div class="circle_4"></div>
+          </div>
+        </div>
+
+        <div class="logo_10">
+          <div class="top">
+            <div class="circle_1"></div>
+            <div class="circle_2"></div>
+          </div>
+          <div class="bottom">
+            <div class="circle_3"></div>
+            <div class="circle_4"></div>
+          </div>
+        </div>
+
+        <div class="logo_11">
+          <div class="top">
+            <div class="circle_1"></div>
+            <div class="circle_2"></div>
+          </div>
+          <div class="bottom">
+            <div class="circle_3"></div>
+            <div class="circle_4"></div>
+          </div>
+        </div>
+
+        <div class="logo_12">
+          <div class="top">
+            <div class="circle_1"></div>
+            <div class="circle_2"></div>
+          </div>
+          <div class="bottom">
+            <div class="circle_3"></div>
+            <div class="circle_4"></div>
+          </div>
+        </div>
+      </div>
+      <h1>SOMNIA</h1>
+    </section>
+    <section class="firstBlock">
+      <div class="sheeps">
+        <div class="sheep1"></div>
+        <div class="sheep2"></div>
+        <div class="sheep3"></div>
+      </div>
+      <img class="fence" src="images/fence.png" alt="" />
+    </section>
+    <section class="secondBlock">
+      <div class="blocks1">
+        <div class="block_1">
+          <div class="moon_1">
+            <div class="halfMoons1"></div>
+            <div class="halfMoons2"></div>
+          </div>
+        </div>
+        <div class="block23">
+          <div class="block_2">
+            <p class="text1">КАК РАБОТАЕТ</p>
+            <p class="text2">КОЛЛЕКТИВНЫЙ</p>
+            <p class="text3">СОН?</p>
+          </div>
+          <div class="block_3">
+            <div class="halfMoons3"></div>
+            <div class="halfMoons4"></div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="thirdSection">
+      <div class="blocks2">
+        <div class="block_4">
+          <div class="pillow1"></div>
+          <div class="pillow2"></div>
+          <div class="pillow3"></div>
+          <div class="pillow4"></div>
+        </div>
+        <div class="block_5">
+          <div class="circleFly1"></div>
+          <div class="circleFly2"></div>
+          <div class="circleFly3"></div>
+          <div class="circleFly4"></div>
+        </div>
+      </div>
+    </section>
+    <section class="fourthBlock">
+      <div class="logo_13">
+        <div class="top">
+          <div class="circle_5"></div>
+          <div class="circle_6"></div>
+        </div>
+        <div class="bottom">
+          <div class="circle_7"></div>
+          <div class="circle_8"></div>
+        </div>
+      </div>
+      <div class="logo_14">
+        <div class="top">
+          <div class="circle_5"></div>
+          <div class="circle_6"></div>
+        </div>
+        <div class="bottom">
+          <div class="circle_7"></div>
+          <div class="circle_8"></div>
+        </div>
+      </div>
+      <div class="logo_15">
+        <div class="top">
+          <div class="circle_5"></div>
+          <div class="circle_6"></div>
+        </div>
+        <div class="bottom">
+          <div class="circle_7"></div>
+          <div class="circle_8"></div>
+        </div>
+      </div>
+      <div class="logo_16">
+        <div class="top">
+          <div class="circle_5"></div>
+          <div class="circle_6"></div>
+        </div>
+        <div class="bottom">
+          <div class="circle_7"></div>
+          <div class="circle_8"></div>
+        </div>
+      </div>
+      <div class="logo_17">
+        <div class="top">
+          <div class="circle_5"></div>
+          <div class="circle_6"></div>
+        </div>
+        <div class="bottom">
+          <div class="circle_7"></div>
+          <div class="circle_8"></div>
+        </div>
+      </div>
+      <div class="logo_18">
+        <div class="top">
+          <div class="circle_5"></div>
+          <div class="circle_6"></div>
+        </div>
+        <div class="bottom">
+          <div class="circle_7"></div>
+          <div class="circle_8"></div>
+        </div>
+      </div>
+      <div class="logo_19">
+        <div class="top">
+          <div class="circle_5"></div>
+          <div class="circle_6"></div>
+        </div>
+        <div class="bottom">
+          <div class="circle_7"></div>
+          <div class="circle_8"></div>
+        </div>
+      </div>
+      <div class="logo_20">
+        <div class="top">
+          <div class="circle_5"></div>
+          <div class="circle_6"></div>
+        </div>
+        <div class="bottom">
+          <div class="circle_7"></div>
+          <div class="circle_8"></div>
+        </div>
+      </div>
+      <div class="logo_21">
+        <div class="top">
+          <div class="circle_5"></div>
+          <div class="circle_6"></div>
+        </div>
+        <div class="bottom">
+          <div class="circle_7"></div>
+          <div class="circle_8"></div>
+        </div>
+      </div>
+      <div class="logo_22">
+        <div class="top">
+          <div class="circle_5"></div>
+          <div class="circle_6"></div>
+        </div>
+        <div class="bottom">
+          <div class="circle_7"></div>
+          <div class="circle_8"></div>
+        </div>
+      </div>
+      <div class="logo_23">
+        <div class="top">
+          <div class="circle_5"></div>
+          <div class="circle_6"></div>
+        </div>
+        <div class="bottom">
+          <div class="circle_7"></div>
+          <div class="circle_8"></div>
+        </div>
+      </div>
+
+      <p class="text4">НОВЫЙ МИР</p>
+      <p class="text5">НОВЫЕ ЭМОЦИИ</p>
+      <p class="text6">НОВЫЕ ОЩУЩЕНИЯ</p>
+    </section>
+    <section class="fifthBlock">
+      <div class="dna">
+        <img class="dnaCase" src="images/dna.png" alt="" />
+        <img class="dnaCase" src="images/dna.png" alt="" />
+      </div>
+    </section>
+    <section class="sixthBlock">
+      <div class="blocks3">
+        <div class="block_6">
+          <div class="text12"><p>СТРАХ</p></div>
+          <div class="text13"><p>РАДОСТЬ</p></div>
+          <div class="text14"><p>УДИВЛЕНИЕ</p></div>
+          <div class="text15"><p>ИНТЕРЕС</p></div>
+          <div class="text16"><p>ПОТРЯСЕНИЕ</p></div>
+          <div class="circle_9"></div>
+          <div class="circle_10"></div>
+          <div class="circle_11"></div>
+          <div class="circle_12"></div>
+          <div class="circle_13"></div>
+        </div>
+        <div class="block_7">
+          <div class="humanSleeps"></div>
+        </div>
+      </div>
+    </section>
+    <section class="seventhBlock">
+      <div class="blocks4">
+        <div class="block_8"></div>
+        <div class="block_9">
+          <p class="text7">Успейте</p>
+          <p class="text8">Успейте</p>
+          <p class="text9">попробовать</p>
+          <p class="text10">первыми</p>
+          <p class="text11">первыми</p>
+        </div>
+        <div class="block_10"></div>
+      </div>
+    </section>
+    <section class="eighthBlock">
+      <div>
+        <p>СТУДЕНТ: СТЕПАНОВА НАТАЛЬЯ Б25ДЗ11</p>
+        <p>СТУДЕНТ: СТЕПАНОВА НАТАЛЬЯ Б25ДЗ11</p>
+      </div>
+    </section>
   </body>
 </html>
