--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="stylesheets/style.css" />
-    <link rel="icon" href="images/iconSleep.ico" type="image/x-icon">
+    <link rel="icon" href="images/iconSleep.ico" type="image/x-icon" />
   </head>
   <body>
     <section class="titleBlock">
@@ -144,11 +144,9 @@
       <h1>SOMNIA</h1>
     </section>
     <section class="firstBlock">
-      <div class="sheeps">
-        <div class="sheep1"></div>
-        <div class="sheep2"></div>
-        <div class="sheep3"></div>
-      </div>
+      <div class="sheep1"></div>
+      <div class="sheep2"></div>
+      <div class="sheep3"></div>
       <img class="fence" src="images/fence.png" alt="" />
     </section>
     <section class="secondBlock">
@@ -331,7 +329,17 @@
     </section>
     <section class="seventhBlock">
       <div class="blocks4">
-        <div class="block_8"></div>
+        <div class="block_8">
+          <div class="half_circles_1"></div>
+          <div class="half_circles_2"></div>
+          <div class="half_circles_3"></div>
+          <div class="half_circles_4"></div>
+          <div class="half_circles_5"></div>
+          <div class="half_circles_6"></div>
+          <div class="half_circles_7"></div>
+          <div class="half_circles_8"></div>
+          <div class="half_circles_9"></div>
+        </div>
         <div class="block_9">
           <p class="text7">Успейте</p>
           <p class="text8">Успейте</p>
@@ -339,7 +347,17 @@
           <p class="text10">первыми</p>
           <p class="text11">первыми</p>
         </div>
-        <div class="block_10"></div>
+        <div class="block_10">
+          <div class="half_circles_10"></div>
+          <div class="half_circles_11"></div>
+          <div class="half_circles_12"></div>
+          <div class="half_circles_13"></div>
+          <div class="half_circles_14"></div>
+          <div class="half_circles_15"></div>
+          <div class="half_circles_16"></div>
+          <div class="half_circles_17"></div>
+          <div class="half_circles_18"></div>
+        </div>
       </div>
     </section>
     <section class="eighthBlock">
