--- a/index.html
+++ b/index.html
@@ -96,6 +96,16 @@
               <div class="circle_4"></div>
             </div>
           </div>
+          <div class="logo-X">
+            <div class="top">
+              <div class="circle_1"></div>
+              <div class="circle_2"></div>
+            </div>
+            <div class="bottom">
+              <div class="circle_3"></div>
+              <div class="circle_4"></div>
+            </div>
+          </div>
         </div>
         <div class="logo_9">
           <div class="top">
@@ -166,6 +176,9 @@
           <div class="block_3">
             <div class="halfMoons3"></div>
             <div class="halfMoons4"></div>
+            <div class="halfMoons5"></div>
+            <div class="halfMoons7"></div>
+            <div class="halfMoons6"></div>
           </div>
         </div>
       </div>
@@ -316,7 +329,7 @@
           <div class="text14"><p>УДИВЛЕНИЕ</p></div>
           <div class="text15"><p>ИНТЕРЕС</p></div>
           <div class="text16"><p>ПОТРЯСЕНИЕ</p></div>
-          <div class="circle_9"></div>
+          <div class="circle_14"></div>
           <div class="circle_10"></div>
           <div class="circle_11"></div>
           <div class="circle_12"></div>
